# links-awakening-3d

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/models/: boomerang.blend  boomerang.blend1  boomerang.mtl  boulder.mtl  bush.dae  starter_shield.blend  starter_sword.blend  tail_cave.mtl  tree.dae  world_mesh.mtl
glad/: glad.c  glad.h
headers/: callback_functions.hpp  globals.hpp  graphicsSetup.hpp  imguiManager.hpp  particles.hpp  player.hpp
shaders/: boomerang.frag  boomerang.vert  boulder.frag  boulder.vert  world.frag  world.vert
